# DesktopTimer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-07-16-countdown-implementation-plan.md
docs/superpowers/specs/: 2026-07-16-countdown-desktop-widget-design.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autostart_manager.rs  countdown_store.rs  lib.rs  main.rs  tray_manager.rs  window_utils.rs
src/components/: CardList.vue  ContextMenu.vue  CountdownCard.vue  InlineEditor.vue  OnboardingToast.vue  ParticlesBackground.vue
src/composables/: useContextMenu.ts  useCountdownEngine.ts
src/types/: index.ts
src/utils/: format.ts
