[package]
name = "deskcountdown"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
winreg = "0.52"
chrono = "0.4"
thiserror = "1"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]}

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
